# gigaphone

./: .mcp.json  README.md  progress.json  pyproject.toml
.agents/skills/gigaphone/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
adapters/harness/claude_code/: README.md  hooks.json
adapters/harness/codex/: hooks.json  openai.yaml  plugin.toml
docs/: IMPLEMENTATION_PLAN.md
docs/adr/: 0007-python-pack-uses-stdlib-ast.md
hooks/: hooks.json
scripts/: build_plugins.py
src/gigaphone/: cli.py  config.py
src/gigaphone/adapters/: registry.py
src/gigaphone/core/: __init__.py  boundary.py  model.py  source.py
src/gigaphone/engine/: detect.py  discover.py  fix.py  plan.py  project.py  report.py  resolve.py  review.py  verify.py
src/gigaphone/interfaces/: language_pack.py
src/gigaphone/mcp/: server.py
src/gigaphone/packs/: registry.py
src/gigaphone/runtime/: __init__.py  otel.py
testclient/: README.md
testclient/app/: __init__.py  agent.py  exec_tool.py  gateway.py  run_representative.py  tracing.py  web_tools.py
testclient/wrapper/: harness.py  run_representative.py  subagent_sdk.py  tracing.py
tests/: test_agent_call.py  test_e2e_agent_wrapper.py  test_e2e_onboarding.py  test_engine_protocols.py  test_harness_and_mcp.py  test_native_backends.py  test_native_emit.py  test_scaffold.py  test_typescript_pack.py
ts/: biome.json
ts/src/: cli.ts  index.ts
ts/src/config/: config.ts
ts/src/core/: model.ts
ts/src/engine/: discover.ts  (+3 more)
ts/tests/: docs.test.ts  nativeBackends.test.ts  rustPack.test.ts
(+28 files in other folders)
