[project]
name = "gigaphone"
version = "0.5.0"
description = "Trace-coverage instrumentation for AI agent codebases — neutral across harness, language, vendor, and codebase."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Gigaflow" }]
dependencies = [
    "pyyaml>=6",            # boundary-config load/save (ADR-0004)
    "opentelemetry-sdk>=1.20",  # generic OTel backend adapter: emit + in-process verify (DESIGN §9)
    # The Python language pack uses the stdlib `ast` module (ADR-0007) — no extra dep.
    # tree-sitter remains the cross-language substrate for packs that need it (e.g. TS).
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[project.scripts]
gigaphone = "gigaphone.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gigaphone"]

# Protected: do not relax these to silence errors — fix the code (golden principle 10).
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
